# openbowl

./: .gitignore  Future Improvements.txt  README.md  docker-compose.yml  openbowl.db-shm  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
.tours/: openbowl-tour.json
apps/desktop/: package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/extension/: content.js  manifest.json  package-lock.json  package.json  playwright.config.js  popup.html  popup.js
apps/extension/tests/: extension.spec.js
apps/vscode/: package-lock.json  package.json
apps/vscode/src/: extension.ts
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.tsx  index.css  main.tsx
docs/: API_DESIGN.md  ARCHITECTURE.md  COMPONENTS.md  CONTEXT_ENGINE.md  CONTRIBUTING.md  DATA_MODEL.md  PRD.md  ROADMAP.md  SECURITY.md  openapi.yaml
scripts/: compile_sidecars.ps1  demo_layout.html  install-startup.ps1  show-tray-status.ps1  take-screenshots.js
server/: go.mod  go.sum  main.go  main_test.go  openbowl_sync.db-shm  openbowl_sync.db-wal
